1. add a new method that tracks every move/resize of every image. 2. write all information to file in proper format.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Temp File
 tmp/*
 
+#Output File
+out/*
+
+# node_modules
+node_modules
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
